; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_id.c_svn_fs_x__get_txn_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_x/extr_id.c_svn_fs_x__get_txn_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_FS_X__INVALID_CHANGE_SET = common dso_local global i64 0, align 8
@SVN_FS_X__INVALID_TXN_ID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @svn_fs_x__get_txn_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @svn_fs_x__is_txn(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = sub nsw i32 0, %7
  %9 = sext i32 %8 to i64
  %10 = load i64, i64* @SVN_FS_X__INVALID_CHANGE_SET, align 8
  %11 = add nsw i64 %9, %10
  %12 = sub nsw i64 %11, 1
  br label %15

13:                                               ; preds = %1
  %14 = load i64, i64* @SVN_FS_X__INVALID_TXN_ID, align 8
  br label %15

15:                                               ; preds = %13, %6
  %16 = phi i64 [ %12, %6 ], [ %14, %13 ]
  ret i64 %16
}

declare dso_local i64 @svn_fs_x__is_txn(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
